dataset1235/2025-2/1153765216/users/2719941446/executions/2372395858_3836350213.log
== SUBMISSION (2025-08-28 18:35:18)
-- CODE: 
peso=float(input("Digite o peso: "))
qty=float(input("Digite a quantidade: "))

1dia=peso/qty
1sem=1dia*7


-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
1798.4
26.28
---- correct output:
1614.44
-- ERROR:
File "XXXX", line 4
    1dia=peso/qty
    ^
SyntaxError: invalid decimal literal
-- TEST CASE 2:
---- input:
1000.3333
20.11
---- correct output:
859.563
-- ERROR:
File "XXXX", line 4
    1dia=peso/qty
    ^
SyntaxError: invalid decimal literal
-- TEST CASE 3:
---- input:
2987.43
14.00
---- correct output:
2889.43
-- ERROR:
File "XXXX", line 4
    1dia=peso/qty
    ^
SyntaxError: invalid decimal literal
-- TEST CASE 4:
---- input:
2884.21
7.40
---- correct output:
2832.41
-- ERROR:
File "XXXX", line 4
    1dia=peso/qty
    ^
SyntaxError: invalid decimal literal
-- TEST CASE 5:
---- input:
2452.8
21.49
---- correct output:
2302.37
-- ERROR:
File "XXXX", line 4
    1dia=peso/qty
    ^
SyntaxError: invalid decimal literal
-- TEST CASE 6:
---- input:
8000.3333
20.11
---- correct output:
7859.563
-- ERROR:
File "XXXX", line 4
    1dia=peso/qty
    ^
SyntaxError: invalid decimal literal
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-28 18:35:16)
-- CODE: 
peso=float(input("Digite o peso: "))
qty=float(input("Digite a quantidade: "))

1dia=peso/qty
1sem=1dia*7


-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
1798.4
26.28
---- correct output:
1614.44
-- ERROR:
File "XXXX", line 4
    1dia=peso/qty
    ^
SyntaxError: invalid decimal literal
-- TEST CASE 2:
---- input:
1000.3333
20.11
---- correct output:
859.563
-- ERROR:
File "XXXX", line 4
    1dia=peso/qty
    ^
SyntaxError: invalid decimal literal
-- TEST CASE 3:
---- input:
2987.43
14.00
---- correct output:
2889.43
-- ERROR:
File "XXXX", line 4
    1dia=peso/qty
    ^
SyntaxError: invalid decimal literal
-- TEST CASE 4:
---- input:
2884.21
7.40
---- correct output:
2832.41
-- ERROR:
File "XXXX", line 4
    1dia=peso/qty
    ^
SyntaxError: invalid decimal literal
-- TEST CASE 5:
---- input:
2452.8
21.49
---- correct output:
2302.37
-- ERROR:
File "XXXX", line 4
    1dia=peso/qty
    ^
SyntaxError: invalid decimal literal
-- TEST CASE 6:
---- input:
8000.3333
20.11
---- correct output:
7859.563
-- ERROR:
File "XXXX", line 4
    1dia=peso/qty
    ^
SyntaxError: invalid decimal literal
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-28 18:36:06)
-- CODE: 
peso=float(input("Digite o peso: "))
qty=float(input("Digite a quantidade: "))




-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
1798.4
26.28
---- correct output:
1614.44
---- user output:
Digite o peso: Digite a quantidade:
-- TEST CASE 2:
---- input:
1000.3333
20.11
---- correct output:
859.563
---- user output:
Digite o peso: Digite a quantidade:
-- TEST CASE 3:
---- input:
2987.43
14.00
---- correct output:
2889.43
---- user output:
Digite o peso: Digite a quantidade:
-- TEST CASE 4:
---- input:
2884.21
7.40
---- correct output:
2832.41
---- user output:
Digite o peso: Digite a quantidade:
-- TEST CASE 5:
---- input:
2452.8
21.49
---- correct output:
2302.37
---- user output:
Digite o peso: Digite a quantidade:
-- TEST CASE 6:
---- input:
8000.3333
20.11
---- correct output:
7859.563
---- user output:
Digite o peso: Digite a quantidade:
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-28 18:35:46)
-- CODE: 
peso=float(input("Digite o peso: "))
qty=float(input("Digite a quantidade: "))

1_dia=peso/qty
1_sem=1dia*7


-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
1798.4
26.28
---- correct output:
1614.44
-- ERROR:
File "XXXX", line 4
    1_dia=peso/qty
     ^
SyntaxError: invalid decimal literal
-- TEST CASE 2:
---- input:
1000.3333
20.11
---- correct output:
859.563
-- ERROR:
File "XXXX", line 4
    1_dia=peso/qty
     ^
SyntaxError: invalid decimal literal
-- TEST CASE 3:
---- input:
2987.43
14.00
---- correct output:
2889.43
-- ERROR:
File "XXXX", line 4
    1_dia=peso/qty
     ^
SyntaxError: invalid decimal literal
-- TEST CASE 4:
---- input:
2884.21
7.40
---- correct output:
2832.41
-- ERROR:
File "XXXX", line 4
    1_dia=peso/qty
     ^
SyntaxError: invalid decimal literal
-- TEST CASE 5:
---- input:
2452.8
21.49
---- correct output:
2302.37
-- ERROR:
File "XXXX", line 4
    1_dia=peso/qty
     ^
SyntaxError: invalid decimal literal
-- TEST CASE 6:
---- input:
8000.3333
20.11
---- correct output:
7859.563
-- ERROR:
File "XXXX", line 4
    1_dia=peso/qty
     ^
SyntaxError: invalid decimal literal
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-28 19:09:39)
-- CODE: 
peso=float(input("Digite o peso: "))
qty=float(input("Digite a quantidade: "))

consumo=qty*7
resto=peso-consumo

print(round(resto,3))

-- EXECUTION TIME: 
0.01
-- TEST CASE 1:
---- input:
1798.4
26.28
---- correct output:
1614.44
---- user output:
Digite o peso: Digite a quantidade: 1614.44
-- TEST CASE 2:
---- input:
1000.3333
20.11
---- correct output:
859.563
---- user output:
Digite o peso: Digite a quantidade: 859.563
-- TEST CASE 3:
---- input:
2987.43
14.00
---- correct output:
2889.43
---- user output:
Digite o peso: Digite a quantidade: 2889.43
-- TEST CASE 4:
---- input:
2884.21
7.40
---- correct output:
2832.41
---- user output:
Digite o peso: Digite a quantidade: 2832.41
-- TEST CASE 5:
---- input:
2452.8
21.49
---- correct output:
2302.37
---- user output:
Digite o peso: Digite a quantidade: 2302.37
-- TEST CASE 6:
---- input:
8000.3333
20.11
---- correct output:
7859.563
---- user output:
Digite o peso: Digite a quantidade: 7859.563
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-28 18:35:15)
-- CODE: 
peso=float(input("Digite o peso: "))
qty=float(input("Digite a quantidade: "))

1dia=peso/qty
1sem=1dia*7


-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
1798.4
26.28
---- correct output:
1614.44
-- ERROR:
File "XXXX", line 4
    1dia=peso/qty
    ^
SyntaxError: invalid decimal literal
-- TEST CASE 2:
---- input:
1000.3333
20.11
---- correct output:
859.563
-- ERROR:
File "XXXX", line 4
    1dia=peso/qty
    ^
SyntaxError: invalid decimal literal
-- TEST CASE 3:
---- input:
2987.43
14.00
---- correct output:
2889.43
-- ERROR:
File "XXXX", line 4
    1dia=peso/qty
    ^
SyntaxError: invalid decimal literal
-- TEST CASE 4:
---- input:
2884.21
7.40
---- correct output:
2832.41
-- ERROR:
File "XXXX", line 4
    1dia=peso/qty
    ^
SyntaxError: invalid decimal literal
-- TEST CASE 5:
---- input:
2452.8
21.49
---- correct output:
2302.37
-- ERROR:
File "XXXX", line 4
    1dia=peso/qty
    ^
SyntaxError: invalid decimal literal
-- TEST CASE 6:
---- input:
8000.3333
20.11
---- correct output:
7859.563
-- ERROR:
File "XXXX", line 4
    1dia=peso/qty
    ^
SyntaxError: invalid decimal literal
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-28 18:35:28)
-- CODE: 
peso=float(input("Digite o peso: "))
qty=float(input("Digite a quantidade: "))

1dia=peso/qty
1sem=1dia*7


-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
1798.4
26.28
---- correct output:
1614.44
-- ERROR:
File "XXXX", line 4
    1dia=peso/qty
    ^
SyntaxError: invalid decimal literal
-- TEST CASE 2:
---- input:
1000.3333
20.11
---- correct output:
859.563
-- ERROR:
File "XXXX", line 4
    1dia=peso/qty
    ^
SyntaxError: invalid decimal literal
-- TEST CASE 3:
---- input:
2987.43
14.00
---- correct output:
2889.43
-- ERROR:
File "XXXX", line 4
    1dia=peso/qty
    ^
SyntaxError: invalid decimal literal
-- TEST CASE 4:
---- input:
2884.21
7.40
---- correct output:
2832.41
-- ERROR:
File "XXXX", line 4
    1dia=peso/qty
    ^
SyntaxError: invalid decimal literal
-- TEST CASE 5:
---- input:
2452.8
21.49
---- correct output:
2302.37
-- ERROR:
File "XXXX", line 4
    1dia=peso/qty
    ^
SyntaxError: invalid decimal literal
-- TEST CASE 6:
---- input:
8000.3333
20.11
---- correct output:
7859.563
-- ERROR:
File "XXXX", line 4
    1dia=peso/qty
    ^
SyntaxError: invalid decimal literal
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-28 18:35:57)
-- CODE: 
peso=float(input("Digite o peso: "))
qty=float(input("Digite a quantidade: "))

1_dia=peso/qty
1_sem=1_dia*7


-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
1798.4
26.28
---- correct output:
1614.44
-- ERROR:
File "XXXX", line 4
    1_dia=peso/qty
     ^
SyntaxError: invalid decimal literal
-- TEST CASE 2:
---- input:
1000.3333
20.11
---- correct output:
859.563
-- ERROR:
File "XXXX", line 4
    1_dia=peso/qty
     ^
SyntaxError: invalid decimal literal
-- TEST CASE 3:
---- input:
2987.43
14.00
---- correct output:
2889.43
-- ERROR:
File "XXXX", line 4
    1_dia=peso/qty
     ^
SyntaxError: invalid decimal literal
-- TEST CASE 4:
---- input:
2884.21
7.40
---- correct output:
2832.41
-- ERROR:
File "XXXX", line 4
    1_dia=peso/qty
     ^
SyntaxError: invalid decimal literal
-- TEST CASE 5:
---- input:
2452.8
21.49
---- correct output:
2302.37
-- ERROR:
File "XXXX", line 4
    1_dia=peso/qty
     ^
SyntaxError: invalid decimal literal
-- TEST CASE 6:
---- input:
8000.3333
20.11
---- correct output:
7859.563
-- ERROR:
File "XXXX", line 4
    1_dia=peso/qty
     ^
SyntaxError: invalid decimal literal
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-28 19:09:43)
-- CODE: 
peso=float(input("Digite o peso: "))
qty=float(input("Digite a quantidade: "))

consumo=qty*7
resto=peso-consumo

print(round(resto,3))

-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
1798.4
26.28
---- correct output:
1614.44
---- user output:
Digite o peso: Digite a quantidade: 1614.44
-- TEST CASE 2:
---- input:
1000.3333
20.11
---- correct output:
859.563
---- user output:
Digite o peso: Digite a quantidade: 859.563
-- TEST CASE 3:
---- input:
2987.43
14.00
---- correct output:
2889.43
---- user output:
Digite o peso: Digite a quantidade: 2889.43
-- TEST CASE 4:
---- input:
2884.21
7.40
---- correct output:
2832.41
---- user output:
Digite o peso: Digite a quantidade: 2832.41
-- TEST CASE 5:
---- input:
2452.8
21.49
---- correct output:
2302.37
---- user output:
Digite o peso: Digite a quantidade: 2302.37
-- TEST CASE 6:
---- input:
8000.3333
20.11
---- correct output:
7859.563
---- user output:
Digite o peso: Digite a quantidade: 7859.563
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-28 18:35:57)
-- CODE: 
peso=float(input("Digite o peso: "))
qty=float(input("Digite a quantidade: "))

1_dia=peso/qty
1_sem=1_dia*7


-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
1798.4
26.28
---- correct output:
1614.44
-- ERROR:
File "XXXX", line 4
    1_dia=peso/qty
     ^
SyntaxError: invalid decimal literal
-- TEST CASE 2:
---- input:
1000.3333
20.11
---- correct output:
859.563
-- ERROR:
File "XXXX", line 4
    1_dia=peso/qty
     ^
SyntaxError: invalid decimal literal
-- TEST CASE 3:
---- input:
2987.43
14.00
---- correct output:
2889.43
-- ERROR:
File "XXXX", line 4
    1_dia=peso/qty
     ^
SyntaxError: invalid decimal literal
-- TEST CASE 4:
---- input:
2884.21
7.40
---- correct output:
2832.41
-- ERROR:
File "XXXX", line 4
    1_dia=peso/qty
     ^
SyntaxError: invalid decimal literal
-- TEST CASE 5:
---- input:
2452.8
21.49
---- correct output:
2302.37
-- ERROR:
File "XXXX", line 4
    1_dia=peso/qty
     ^
SyntaxError: invalid decimal literal
-- TEST CASE 6:
---- input:
8000.3333
20.11
---- correct output:
7859.563
-- ERROR:
File "XXXX", line 4
    1_dia=peso/qty
     ^
SyntaxError: invalid decimal literal
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-28 18:30:22)
-- CODE: 
peso=float(input("Digite o peso: "))

-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
1798.4
26.28
---- correct output:
1614.44
---- user output:
Digite o peso:
-- TEST CASE 2:
---- input:
1000.3333
20.11
---- correct output:
859.563
---- user output:
Digite o peso:
-- TEST CASE 3:
---- input:
2987.43
14.00
---- correct output:
2889.43
---- user output:
Digite o peso:
-- TEST CASE 4:
---- input:
2884.21
7.40
---- correct output:
2832.41
---- user output:
Digite o peso:
-- TEST CASE 5:
---- input:
2452.8
21.49
---- correct output:
2302.37
---- user output:
Digite o peso:
-- TEST CASE 6:
---- input:
8000.3333
20.11
---- correct output:
7859.563
---- user output:
Digite o peso:
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
